--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,11 +51,11 @@
   }
 
   h1 {
-    @apply text-2xl md:text-4xl font-bold;
+    @apply text-3xl md:text-4xl font-bold;
   }
 
   h2 {
-    @apply text-xl md:text-2xl font-semibold;
+    @apply text-2xl md:text-2xl font-semibold;
   }
 
   h3 {
