--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@
   }
 
   .input-custom {
-    @apply p-3 outline-none w-full rounded-md dark:bg-[#222222] dark:focus:bg-[#252525];
+    @apply p-3 outline-none w-full rounded-md bg-tertiary focus:bg-tertiary/70 dark:bg-tertiary_dark dark:focus:bg-tertiary_dark/70 border border-x-neutral-200 dark:border-neutral-700;
   }
 
   body {
@@ -157,7 +157,7 @@ article *:hover > .heading-hook {
 
 /* ---------------------Code Highlighter START-------------------- */
 .rehype-code-title {
-  @apply px-5 py-3 font-mono text-sm font-bold text-tertiary_dark dark:text-tertiary  bg-tertiary  rounded-t-md  dark:bg-tertiary_dark;
+  @apply px-5 py-3 font-mono text-sm font-bold text-tertiary_dark dark:text-tertiary  bg-secondary  rounded-t-md  dark:bg-secondary_dark border border-b-0 border-neutral-200 dark:border-neutral-700;
 }
 
 .code-line {
@@ -170,11 +170,12 @@ article *:hover > .heading-hook {
 
 code[class*="language-"],
 pre[class*="language-"] {
-  @apply bg-[#f8f8f8] dark:bg-[#171717] mb-5;
+  /* @apply bg-[#f8f8f8] dark:bg-[#171717] mb-5; */
+  @apply bg-secondary dark:bg-secondary_dark;
 }
 
 pre[class*="language-"] {
-  @apply p-4 overflow-x-auto  rounded-b-md;
+  @apply p-4 overflow-x-auto rounded-b-md border  border-neutral-200 dark:border-neutral-700 brightness-90;
 }
 
 :not(pre) > code {
